@@ -1,0 +1,16 @@
+{
+  "model_key": "sneddon_spher_approx",
+  "preprocessing": [
+    "compute_tip_position"
+  ],
+  "preprocessing_options": {},
+  "range_type": "absolute",
+  "range_x": [
+    0.0,
+    0.0
+  ],
+  "rating regressor": "Extra Trees",
+  "rating training set": "zef18",
+  "segment": 0,
+  "weight_cp": 5e-07
+}
